chore: remove some code smells
* unused imports
* unnecessary assignments or initializations
* usages of `Arrays#asList` with single arguments
* inner classes that weren't static